# pokerai

./: .gitignore  CMakeLists.txt  README.md
pai/abstraction/: check_river_dist.cc  cluster.cc  cluster_river.cc  generate_distributions.cc  hand_distribution.cc  hand_distribution.h  hand_indexer.cc  hand_indexer.h  hand_indexer_playground.cc  ochs.cc  ochs.h  omp_playground.cc
pai/mccfr/: external_sampling_mccfr.cc  external_sampling_mccfr.h  infoset.cc  infoset.h  infoset_test.cc  infotable.cc  infotable.h  infotable_test.cc  liars_dice.cc  play_liars.cc  playground.cc  rng.cc  rng.h  rng_test.cc  train.cc  train_liars.cc
pai/mccfr/game/: game.h  liars_dice.cc  liars_dice.h  liars_dice_test.cc  nlhu_poker.cc  nlhu_poker.h
pai/playground/: card_abstraction.ipynb  clustering_hands.ipynb  kuhn_cfr.ipynb  kuhn_mccfr.ipynb  learn_cfr.ipynb  liars_dice_mccfr.ipynb
